[package]
name = "server-rust"
version = "0.1.0"
authors = ["Viacheslav Bereza <mail@betula.co>"]

[dependencies]
env_logger = "0.5"
actix = "0.5"
actix-web = "^0.6"

futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.3.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.10"
